--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.14.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-mixitup": "^2.3.0",
+    "react-particles-js": "^2.7.0",
+    "react-scripts": "^3.3.0",
+    "react-scrollspy": "^3.4.2",
+    "react-sticky": "^6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2"
   }
 }
